cmake_minimum_required(VERSION 2.8)
project(simulator)

set(CMAKE_CXX_STANDARD 14)

set(SOURCE_FILES
        coresim/debug.cpp
        coresim/debug.h
        coresim/event.cpp
        coresim/event.h
        coresim/flow.cpp
        coresim/flow.h
        coresim/main.cpp
        coresim/node.cpp
        coresim/node.h
        coresim/packet.cpp
        coresim/packet.h
        coresim/queue.cpp
        coresim/queue.h
        coresim/random_variable.cpp
        coresim/random_variable.h
        coresim/topology.cpp
        coresim/topology.h
        ext/capabilityflow.cpp
        ext/capabilityflow.h
        ext/capabilityhost.cpp
        ext/capabilityhost.h
        ext/custompriorityqueue.h
        ext/dctcpFlow.cpp
        ext/dctcpFlow.h
        ext/dctcpPacket.h
        ext/dctcpQueue.cpp
        ext/dctcpQueue.h
        ext/factory.cpp
        ext/factory.h
        ext/fastpassflow.cpp
        ext/fastpassflow.h
        ext/fastpasshost.cpp
        ext/fastpasshost.h
        ext/fastpassTopology.cpp
        ext/fastpassTopology.h
        ext/fountainflow.cpp
        ext/fountainflow.h
        ext/ideal.cpp
        ext/ideal.h
        ext/magicflow.cpp
        ext/magicflow.h
        ext/magichost.cpp
        ext/magichost.h
        ext/pfabricflow.cpp
        ext/pfabricflow.h
        ext/pfabricqueue.cpp
        ext/pfabricqueue.h
        ext/pq_queue.cpp
        ext/pq_queue.h
        ext/fairnessdequequeue.cpp
        ext/fairnessdequequeue.h
        ext/schedulinghost.cpp
        ext/schedulinghost.h
        ext/tcpflow.cpp
        ext/tcpflow.h
        run/experiment.cpp
        run/flow_generator.cpp
        run/flow_generator.h
        run/params.cpp
        run/params.h
        run/stats.cpp
        run/stats.h)

add_executable(simulator ${SOURCE_FILES})
